# attn_demo

./: .gitignore  250917010323_long_form_tokens_mformer-t5-l6-mk1-21d0cffb-48ce-4195-880a-e6c9ca5b1a0b.pt  250919175424_long_form_tokens_mformer-t5-l6-mk2-ce62b19e-4718-4f15-bdee-af0ace4e7cc2_continued_rollout.pt  analyze_rollouts.py  ascii_tokenizer.py  batch_encode_for_twitter.py  config.yaml  create_bpe_index.py  decode_audio.py  encodec_index.py  encodec_service.py  evaluate.py  generated_audio_tokens_mformer-t5-l6-mk1-21d0cffb-48ce-4195-880a-e6c9ca5b1a0b.pt  hard_deps.txt  learn_audio_bpe.py  loader.py  local_client.py  mformer_dataset.py  mformer_utils.py  netspec.py  peek_log.txt  pgptlformer.py  prompt.txt  prompt_utils.py  pyproject.toml  pyproject.tommml.toml  readme.md  redis_utils.py  reqqies.txt  roneneldan_discussions_8.txt  sample-ascii.py  sample.py  sample_ascii.py  sample_audio_t5.py  sample_audio_t5_skipdecode.py  sample_t5.py  sampler_utils.py  serve_audio.py  simple_shimformer.py  t5_service.py  (+5 more)
configs/: ascii_char_model.json  ascii_chart5_model.json  ascii_eos_model.json  ascii_eos_model_rollouttest.json  mformer-t5-mk1.json  mformer-t5-mk2.json
data/: data.txt  prepare.py  prepare_ascii.py  prepare_parqeuify.py  txt_parqueifier.py
