[project]
name = "attn-toy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.45.1",
    "datasets>=4.0.0",
    "encodec>=0.1.1",
    "flash-attn==2.7.2.post1",
    "huggingface-hub>=0.28.1",
    "matplotlib>=3.10.6",
    "metaphone>=0.6",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-nvcc-cu12==12.4.131",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pot>=0.9.5",
    "psutil>=6.1.1",
    "pyahocorasick>=2.2.0",
    "pyphonetics>=0.5.3",
    "pysoundfile>=0.9.0.post1",
    "scipy>=1.15.3",
    "sentence-transformers>=5.1.0",
    "setuptools>=75.8.0",
    "stanza>=1.10.1",
    "tiktoken>=0.8.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "triton",
    "zss>=1.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton = { url = "https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post8/triton-3.1.0-cp310-cp310-win_amd64.whl" }

[tool.uv]
no-build-isolation-package = ['flash-attn']
